Bug 1077513 - Stop Loop's contacts display squashing the avatar when a contact has a long name. r=Mardak
UltraBlame original commit: 9d30e8decf0ee20e8deb0f5a60b5a3eef3d15614

--- a/browser/components/loop/content/css/contacts.css
+++ b/browser/components/loop/content/css/contacts.css
@@ -165,14 +165,7 @@ html[dir="rtl"] .contact-filter {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-
-.contact:hover > .details {
-  
-
-
-
-  flex: 190;
+  flex: auto;
 }
 
 .contact > .avatar {
@@ -188,6 +181,7 @@ html[dir="rtl"] .contact-filter {
   background-color: #4ba6e7;
   background-size: contain;
   -moz-user-select: none;
+  flex: none;
 }
 
 
@@ -305,9 +299,10 @@ html[dir="rtl"] .contact-filter {
 .icons {
   cursor: pointer;
   display: none;
-  -moz-margin-start: auto;
+  -moz-margin-start: 10px;
   color: #fff;
   -moz-user-select: none;
+  flex: none;
 }
 
 .icons:hover {
